# blog-project

./: README.md  landing-page.txt  mid_scale_production.md  schemas.txt
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: db.py  deps.py  init_index.py  main.py  models.py  objectstore.py  run_server.sh  utils.py
backend/app/routers/: assets.py  assetsv2.py  posts.py  public.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AdminBlogPage.jsx  AdminRoute.jsx  BlogCard.jsx  Button.jsx  LatestBlogCard.jsx  Navbar.jsx  PublicBlogCard.jsx  PublicLatestBlogCard.jsx  Tags.jsx  ToggleButton.jsx
frontend/src/editor/: PublishHtml.jsx  SimpleEditor.jsx  utils.js
frontend/src/pages/: About.jsx  AdminBlogPage.jsx  PostPreview.jsx  PublicBlogPage.jsx  Tags.jsx  postsApi.js
