[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "boto3>=1.40.59",
    "clerk-backend-api>=3.3.1",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "motor>=3.7.1",
    "pillow>=12.0.0",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "uvicorn>=0.37.0",
]
